@@ -132,8 +132,8 @@
         </head>
 
         <body>
-            <div><div class="modal"><div class="modal-background"></div><div class="modal-content"><p id="modal-images" class="image"></p></div><button class="modal-close is-large" aria-label="close"></button></div><section class="section has-background-light" style="padding-bottom:25px"><div id="filter" class="container"><h3 class="title is-3"><span class="has-text-grey-light">Total Duration:</span> 12 seconds</h3><div class="columns summary"><div class="column"><div data-status="all" class="is-selected notification is-link"><h1 class="title is-size-2">0</h1><p class="title is-size-4">Total</p></div></div><div class="column"><div data-status="passed" class="notification is-success"><h1 class=" title is-size-2">0</h1><p class="title is-size-4">Passed</p></div></div><div class="column"><div data-status="failed" class="notification is-danger"><h1 class="title is-size-2">0</h1><p class="title is-size-4">Failed</p></div></div><div class="column"><div data-status="skipped" class="notification is-warning"><h1 class="title is-size-2">0</h1><p class="title is-size-4">Skipped</p></div></div></div></div><div class="container"><div class="columns"><div class="column
-            is-half"><div class="control has-icons-left has-icons-right"><input type="text" id="search" class="input" placeholder="Search for specs containing specific text e.g browser version"/><span class="icon is-small is-left"><i class="fas fa-search"></i></span></div></div></div><p id="no-results" style="display:none">No results found</p><div id="results" class="tests all"></div></div></section><footer class="footer"><div class="content has-text-centered"><p><strong>wdio-timeline-reporter</strong> by Qops. The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.</p><a href="https://bulma.io"><img src="https://bulma.io/images/made-with-bulma--black.png" alt="Made with Bulma" width="128" height="24"/></a></div></footer></div>
+            <div><div class="modal"><div class="modal-background"></div><div class="modal-content"><p id="modal-images" class="image"></p></div><button class="modal-close is-large" aria-label="close"></button></div><section class="section has-background-light" style="padding-bottom:25px"><div id="filter" class="container"><h3 class="title is-3"><span class="has-text-grey-light">Total Duration:</span> 40 seconds</h3><div class="columns summary"><div class="column"><div data-status="all" class="is-selected notification is-link"><h1 class="title is-size-2">1</h1><p class="title is-size-4">Total</p></div></div><div class="column"><div data-status="passed" class="notification is-success"><h1 class=" title is-size-2">1</h1><p class="title is-size-4">Passed</p></div></div><div class="column"><div data-status="failed" class="notification is-danger"><h1 class="title is-size-2">0</h1><p class="title is-size-4">Failed</p></div></div><div class="column"><div data-status="skipped" class="notification is-warning"><h1 class="title is-size-2">0</h1><p class="title is-size-4">Skipped</p></div></div></div></div><div class="container"><div class="columns"><div class="column
+            is-half"><div class="control has-icons-left has-icons-right"><input type="text" id="search" class="input" placeholder="Search for specs containing specific text e.g browser version"/><span class="icon is-small is-left"><i class="fas fa-search"></i></span></div></div></div><p id="no-results" style="display:none">No results found</p><div id="results" class="tests all"><div class="box" data-box-is="spec"><h4 class="title is-4"><span class="has-text-grey-light">Spec:</span> C:\Users\Leo\Documents\Automation\mobile\appium-boilerplate\tests\specs\app.signin.spec.ts </h4><h4 class="title is-4"><span class="has-text-grey-light">Duration:</span> 23 seconds</h4><h4 class="title is-4"><span class="has-text-grey-light">Browser: </span><span class="has-text-grey-light"><i class="fab undefined"></i></span> emulator-5554 13</h4><div class="box suites-results" data-box-is="suite"><h4 id="Signing-from-the-welcome-page" class="subtitle is-4 linkable-header subtitle"><a href="#Signing-from-the-welcome-page" class="linkable-header__link">🔗</a>Signing from the welcome page</h4><div class="box test passed"><h5 id="should-be-able-to-sign-in-into-the-app" class="subtitle is-5 linkable-header "><a href="#should-be-able-to-sign-in-into-the-app" class="linkable-header__link">🔗</a>should be able to sign in into the app</h5><div class="columns"><div class="column is-half"><table class="table is-hoverable"><tr><td>Status:</td><td><span class="tag is-normal is-success">PASSED</span></td></tr><tr><td>Duration:</td><td>22 seconds</td></tr><tr><td>Start:</td><td>October 5, 2023 09:55:36</td></tr><tr><td>End:</td><td>October 5, 2023 09:55:59</td></tr></table></div></div><div class="tile no-screenshots"><div class="screenshots-scroll-container"></div></div></div></div></div></div></div></section><footer class="footer"><div class="content has-text-centered"><p><strong>wdio-timeline-reporter</strong> by Qops. The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.</p><a href="https://bulma.io"><img src="https://bulma.io/images/made-with-bulma--black.png" alt="Made with Bulma" width="128" height="24"/></a></div></footer></div>
             <script type="text/javascript">
                 
     const imgs = document.querySelectorAll('.screenshot-img');
